--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "bluebird": "^3.7.2",
     "eslint": "^7.28.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
