--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "jest": "26.6.0"
   },
   "scripts": {
     "start": "node src/server localhost 3000",
     "dev": "nodemon ./src/server.js localhost 3000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ./test/controller.test.js"
   },
   "keywords": [],
   "author": "",
