--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "jest": "26.6.0"
+    "jest": "26.6.0",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "node src/server localhost 3000",
