--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-text-mask": "^5.4.8",
     "eslint": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.3.5"
